--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,14 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-solr'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
+	compile 'org.springframework.boot:spring-boot-starter'
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-parent', version: '2.1.6.RELEASE', ext: 'pom'
+
+	compile 'org.springframework.boot:spring-boot-starter-data-solr'
+	compile 'org.apache.solr:solr-solrj'
+
+
+    implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	compile 'io.springfox:springfox-swagger2:2.9.2'
