--- a/build.gradle
+++ b/build.gradle
@@ -41,4 +41,8 @@ dependencies {
 	compile 'io.springfox:springfox-swagger2:2.9.2'
 	compile 'io.springfox:springfox-swagger-ui:2.9.2'
 
+	//Elastic :3.1.9.RELEASE
+	compile 'org.springframework.data:spring-data-elasticsearch'
+
+
 }
