--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 solr.home.url=http://localhost:8983/solr
 spring.data.solr.host=http://localhost:8983/solr/
+
+elasticsearch.cluster.name=elasticsearch
+elasticsearch.home=D:\\elasticsearch-6.5.0
+elasticsearch.host=127.0.0.1
+elasticsearch.port=9300
