--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,15 @@ elasticsearch.cluster.name=elasticsearch
 elasticsearch.home=D:\\elasticsearch-6.5.0
 elasticsearch.host=127.0.0.1
 elasticsearch.port=9300
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/solr
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=admin
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+
+jwt.token.secret=jwtappdemo
+jwt.token.expired=3600000
